# pico-clock

./: CMakeLists.txt  README.md
RTC/: CMakeLists.txt  rtc_test.c  set_time.c
RTC/rtc_driver/: CMakeLists.txt  display_driver.c  rtc_driver.c  rtc_driver.h
basic/: CMakeLists.txt  basic_clock.c  ws2812.c
basic/display_driver/: CMakeLists.txt  display_driver.c  display_driver.h  masks.c  masks.h
basic/display_driver/masks/: CMakeLists.txt
dev_tools/mask-generator/: mask-generator.py  masks_original.h
dev_tools/mask-generator/masks/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  one.txt  two.txt
dev_tools/mask-generator/masks copy/: two.txt
dev_tools/mask-generator/output/: full.txt  masks.h
example/: CMakeLists.txt
examples/: CMakeLists.txt
examples/i2c_example/: CMakeLists.txt
examples/rtc_example/: CMakeLists.txt
examples/ws2812_example/: ws2812.c
utils/: CMakeLists.txt  ws2812.c
